QL/gram.output
Grammar

    0 $accept: commands $end

    1 commands: command
    2         | commands command

    3 command: error SEMICOLON
    4        | empty
    5        | show
    6        | commit
    7        | rollback
    8        | use_database
    9        | create_database
   10        | create_table
   11        | create_view
   12        | drop_database
   13        | drop_table
   14        | drop_view
   15        | select
   16        | insert
   17        | delete
   18        | update
   19        | help
   20        | exit

   21 empty: SEMICOLON

   22 commit: COMMIT SEMICOLON

   23 rollback: ROLLBACK SEMICOLON

   24 show: SHOW DATABASES SEMICOLON
   25     | SHOW TABLES SEMICOLON

   26 exit: EXIT SEMICOLON

   27 help: HELP SEMICOLON

   28 use_database: USE ID SEMICOLON

   29 create_database: CREATE DATABASE ID SEMICOLON

   30 drop_database: DROP DATABASE ID SEMICOLON

   31 create_table: CREATE TABLE ID LBRACE attr_def_list RBRACE SEMICOLON

   32 drop_table: DROP TABLE ID SEMICOLON

   33 create_view: CREATE VIEW ID AS query SEMICOLON

   34 drop_view: DROP VIEW ID SEMICOLON

   35 attr_def_list: attr_def
   36              | attr_def_list COMMA attr_def

   37 attr_def: ID type pk fk ck

   38 pk: /* empty */
   39   | PRIMARY KEY

   40 fk: /* empty */
   41   | FOREIGN KEY REFERENCES ID LBRACE ID RBRACE

   42 ck: /* empty */
   43   | CHECK LBRACE ID compOp value RBRACE

   44 type: INT_T
   45     | STRING_T
   46     | FLOAT_T

   47 insert: INSERT INTO ID VALUES LBRACE value_list RBRACE SEMICOLON

   48 value_list: value
   49           | value_list COMMA value

   50 value: NUMBER
   51      | STRING_V
   52      | NUMBER DOT NUMBER

   53 delete: DELETE FROM ID WHERE condition SEMICOLON
   54       | DELETE FROM ID SEMICOLON
   55       | DELETE STAR FROM ID SEMICOLON

   56 update: UPDATE ID SET assignment_list WHERE condition SEMICOLON

   57 assignment_list: attr EQ av
   58                | assignment_list COMMA attr EQ av

   59 query: SELECT select_attr FROM rel_list WHERE condition
   60      | SELECT select_attr FROM rel_list

   61 select: query SEMICOLON

   62 select_attr: STAR
   63            | attr_list

   64 condition: av compOp av
   65          | avlist IN LBRACE query RBRACE
   66          | condition AND condition
   67          | condition OR condition
   68          | NOT condition
   69          | LBRACE condition RBRACE

   70 compOp: EQ
   71       | LT
   72       | GT
   73       | LE
   74       | GE
   75       | NE

   76 av: attr
   77   | value

   78 avlist: av
   79       | avlist COMMA av

   80 attr: ID
   81     | ID DOT ID

   82 attr_list: attr
   83          | attr_list COMMA attr

   84 rel_list: ID
   85         | rel_list COMMA ID


Terminals, with rules where they appear

$end (0) 0
error (256) 3
SEMICOLON (258) 3 21 22 23 24 25 26 27 28 29 30 31 32 33 34 47 53 54
    55 56 61
CREATE (259) 29 31 33
DROP (260) 30 32 34
TABLE (261) 31 32
VIEW (262) 33 34
SELECT (263) 59 60
INSERT (264) 47
DELETE (265) 53 54 55
UPDATE (266) 56
LBRACE (267) 31 41 43 47 65 69
RBRACE (268) 31 41 43 47 65 69
COMMA (269) 36 49 58 79 83 85
INT_T (270) 44
STRING_T (271) 45
FLOAT_T (272) 46
HELP (273) 27
EXIT (274) 26
DOT (275) 52 81
INTO (276) 47
VALUES (277) 47
STAR (278) 55 62
FROM (279) 53 54 55 59 60
WHERE (280) 53 56 59
AND (281) 66
OR (282) 67
NOT (283) 68
AS (284) 33
PRIMARY (285) 39
KEY (286) 39 41
EQ (287) 57 58 70
LT (288) 71
GT (289) 72
LE (290) 73
GE (291) 74
NE (292) 75
IN (293) 65
DATABASE (294) 29 30
USE (295) 28
SET (296) 56
FOREIGN (297) 41
REFERENCES (298) 41
CHECK (299) 43
SHOW (300) 24 25
DATABASES (301) 24
TABLES (302) 25
ROLLBACK (303) 23
COMMIT (304) 22
NUMBER (305) 50 52
ID (306) 28 29 30 31 32 33 34 37 41 43 47 53 54 55 56 80 81 84 85
STRING_V (307) 51
QUERY (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
commands (55)
    on left: 1 2, on right: 0 2
command (56)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    1 2
empty (57)
    on left: 21, on right: 4
commit (58)
    on left: 22, on right: 6
rollback (59)
    on left: 23, on right: 7
show (60)
    on left: 24 25, on right: 5
exit (61)
    on left: 26, on right: 20
help (62)
    on left: 27, on right: 19
use_database (63)
    on left: 28, on right: 8
create_database (64)
    on left: 29, on right: 9
drop_database (65)
    on left: 30, on right: 12
create_table (66)
    on left: 31, on right: 10
drop_table (67)
    on left: 32, on right: 13
create_view (68)
    on left: 33, on right: 11
drop_view (69)
    on left: 34, on right: 14
attr_def_list (70)
    on left: 35 36, on right: 31 36
attr_def (71)
    on left: 37, on right: 35 36
pk (72)
    on left: 38 39, on right: 37
fk (73)
    on left: 40 41, on right: 37
ck (74)
    on left: 42 43, on right: 37
type (75)
    on left: 44 45 46, on right: 37
insert (76)
    on left: 47, on right: 16
value_list (77)
    on left: 48 49, on right: 47 49
value (78)
    on left: 50 51 52, on right: 43 48 49 77
delete (79)
    on left: 53 54 55, on right: 17
update (80)
    on left: 56, on right: 18
assignment_list (81)
    on left: 57 58, on right: 56 58
query (82)
    on left: 59 60, on right: 33 61 65
select (83)
    on left: 61, on right: 15
select_attr (84)
    on left: 62 63, on right: 59 60
condition (85)
    on left: 64 65 66 67 68 69, on right: 53 56 59 66 67 68 69
compOp (86)
    on left: 70 71 72 73 74 75, on right: 43 64
av (87)
    on left: 76 77, on right: 57 58 64 78 79
avlist (88)
    on left: 78 79, on right: 65 79
attr (89)
    on left: 80 81, on right: 57 58 76 82 83
attr_list (90)
    on left: 82 83, on right: 63 83
rel_list (91)
    on left: 84 85, on right: 59 60 85


state 0

    0 $accept: . commands $end

    error      shift, and go to state 1
    SEMICOLON  shift, and go to state 2
    CREATE     shift, and go to state 3
    DROP       shift, and go to state 4
    SELECT     shift, and go to state 5
    INSERT     shift, and go to state 6
    DELETE     shift, and go to state 7
    UPDATE     shift, and go to state 8
    HELP       shift, and go to state 9
    EXIT       shift, and go to state 10
    USE        shift, and go to state 11
    SHOW       shift, and go to state 12
    ROLLBACK   shift, and go to state 13
    COMMIT     shift, and go to state 14

    commands         go to state 15
    command          go to state 16
    empty            go to state 17
    commit           go to state 18
    rollback         go to state 19
    show             go to state 20
    exit             go to state 21
    help             go to state 22
    use_database     go to state 23
    create_database  go to state 24
    drop_database    go to state 25
    create_table     go to state 26
    drop_table       go to state 27
    create_view      go to state 28
    drop_view        go to state 29
    insert           go to state 30
    delete           go to state 31
    update           go to state 32
    query            go to state 33
    select           go to state 34


state 1

    3 command: error . SEMICOLON

    SEMICOLON  shift, and go to state 35


state 2

   21 empty: SEMICOLON .

    $default  reduce using rule 21 (empty)


state 3

   29 create_database: CREATE . DATABASE ID SEMICOLON
   31 create_table: CREATE . TABLE ID LBRACE attr_def_list RBRACE SEMICOLON
   33 create_view: CREATE . VIEW ID AS query SEMICOLON

    TABLE     shift, and go to state 36
    VIEW      shift, and go to state 37
    DATABASE  shift, and go to state 38


state 4

   30 drop_database: DROP . DATABASE ID SEMICOLON
   32 drop_table: DROP . TABLE ID SEMICOLON
   34 drop_view: DROP . VIEW ID SEMICOLON

    TABLE     shift, and go to state 39
    VIEW      shift, and go to state 40
    DATABASE  shift, and go to state 41


state 5

   59 query: SELECT . select_attr FROM rel_list WHERE condition
   60      | SELECT . select_attr FROM rel_list

    STAR  shift, and go to state 42
    ID    shift, and go to state 43

    select_attr  go to state 44
    attr         go to state 45
    attr_list    go to state 46


state 6

   47 insert: INSERT . INTO ID VALUES LBRACE value_list RBRACE SEMICOLON

    INTO  shift, and go to state 47


state 7

   53 delete: DELETE . FROM ID WHERE condition SEMICOLON
   54       | DELETE . FROM ID SEMICOLON
   55       | DELETE . STAR FROM ID SEMICOLON

    STAR  shift, and go to state 48
    FROM  shift, and go to state 49


state 8

   56 update: UPDATE . ID SET assignment_list WHERE condition SEMICOLON

    ID  shift, and go to state 50


state 9

   27 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 51


state 10

   26 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 52


state 11

   28 use_database: USE . ID SEMICOLON

    ID  shift, and go to state 53


state 12

   24 show: SHOW . DATABASES SEMICOLON
   25     | SHOW . TABLES SEMICOLON

    DATABASES  shift, and go to state 54
    TABLES     shift, and go to state 55


state 13

   23 rollback: ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 56


state 14

   22 commit: COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 57


state 15

    0 $accept: commands . $end
    2 commands: commands . command

    $end       shift, and go to state 58
    error      shift, and go to state 1
    SEMICOLON  shift, and go to state 2
    CREATE     shift, and go to state 3
    DROP       shift, and go to state 4
    SELECT     shift, and go to state 5
    INSERT     shift, and go to state 6
    DELETE     shift, and go to state 7
    UPDATE     shift, and go to state 8
    HELP       shift, and go to state 9
    EXIT       shift, and go to state 10
    USE        shift, and go to state 11
    SHOW       shift, and go to state 12
    ROLLBACK   shift, and go to state 13
    COMMIT     shift, and go to state 14

    command          go to state 59
    empty            go to state 17
    commit           go to state 18
    rollback         go to state 19
    show             go to state 20
    exit             go to state 21
    help             go to state 22
    use_database     go to state 23
    create_database  go to state 24
    drop_database    go to state 25
    create_table     go to state 26
    drop_table       go to state 27
    create_view      go to state 28
    drop_view        go to state 29
    insert           go to state 30
    delete           go to state 31
    update           go to state 32
    query            go to state 33
    select           go to state 34


state 16

    1 commands: command .

    $default  reduce using rule 1 (commands)


state 17

    4 command: empty .

    $default  reduce using rule 4 (command)


state 18

    6 command: commit .

    $default  reduce using rule 6 (command)


state 19

    7 command: rollback .

    $default  reduce using rule 7 (command)


state 20

    5 command: show .

    $default  reduce using rule 5 (command)


state 21

   20 command: exit .

    $default  reduce using rule 20 (command)


state 22

   19 command: help .

    $default  reduce using rule 19 (command)


state 23

    8 command: use_database .

    $default  reduce using rule 8 (command)


state 24

    9 command: create_database .

    $default  reduce using rule 9 (command)


state 25

   12 command: drop_database .

    $default  reduce using rule 12 (command)


state 26

   10 command: create_table .

    $default  reduce using rule 10 (command)


state 27

   13 command: drop_table .

    $default  reduce using rule 13 (command)


state 28

   11 command: create_view .

    $default  reduce using rule 11 (command)


state 29

   14 command: drop_view .

    $default  reduce using rule 14 (command)


state 30

   16 command: insert .

    $default  reduce using rule 16 (command)


state 31

   17 command: delete .

    $default  reduce using rule 17 (command)


state 32

   18 command: update .

    $default  reduce using rule 18 (command)


state 33

   61 select: query . SEMICOLON

    SEMICOLON  shift, and go to state 60


state 34

   15 command: select .

    $default  reduce using rule 15 (command)


state 35

    3 command: error SEMICOLON .

    $default  reduce using rule 3 (command)


state 36

   31 create_table: CREATE TABLE . ID LBRACE attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 61


state 37

   33 create_view: CREATE VIEW . ID AS query SEMICOLON

    ID  shift, and go to state 62


state 38

   29 create_database: CREATE DATABASE . ID SEMICOLON

    ID  shift, and go to state 63


state 39

   32 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 64


state 40

   34 drop_view: DROP VIEW . ID SEMICOLON

    ID  shift, and go to state 65


state 41

   30 drop_database: DROP DATABASE . ID SEMICOLON

    ID  shift, and go to state 66


state 42

   62 select_attr: STAR .

    $default  reduce using rule 62 (select_attr)


state 43

   80 attr: ID .
   81     | ID . DOT ID

    DOT  shift, and go to state 67

    $default  reduce using rule 80 (attr)


state 44

   59 query: SELECT select_attr . FROM rel_list WHERE condition
   60      | SELECT select_attr . FROM rel_list

    FROM  shift, and go to state 68


state 45

   82 attr_list: attr .

    $default  reduce using rule 82 (attr_list)


state 46

   63 select_attr: attr_list .
   83 attr_list: attr_list . COMMA attr

    COMMA  shift, and go to state 69

    $default  reduce using rule 63 (select_attr)


state 47

   47 insert: INSERT INTO . ID VALUES LBRACE value_list RBRACE SEMICOLON

    ID  shift, and go to state 70


state 48

   55 delete: DELETE STAR . FROM ID SEMICOLON

    FROM  shift, and go to state 71


state 49

   53 delete: DELETE FROM . ID WHERE condition SEMICOLON
   54       | DELETE FROM . ID SEMICOLON

    ID  shift, and go to state 72


state 50

   56 update: UPDATE ID . SET assignment_list WHERE condition SEMICOLON

    SET  shift, and go to state 73


state 51

   27 help: HELP SEMICOLON .

    $default  reduce using rule 27 (help)


state 52

   26 exit: EXIT SEMICOLON .

    $default  reduce using rule 26 (exit)


state 53

   28 use_database: USE ID . SEMICOLON

    SEMICOLON  shift, and go to state 74


state 54

   24 show: SHOW DATABASES . SEMICOLON

    SEMICOLON  shift, and go to state 75


state 55

   25 show: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 76


state 56

   23 rollback: ROLLBACK SEMICOLON .

    $default  reduce using rule 23 (rollback)


state 57

   22 commit: COMMIT SEMICOLON .

    $default  reduce using rule 22 (commit)


state 58

    0 $accept: commands $end .

    $default  accept


state 59

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


state 60

   61 select: query SEMICOLON .

    $default  reduce using rule 61 (select)


state 61

   31 create_table: CREATE TABLE ID . LBRACE attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 77


state 62

   33 create_view: CREATE VIEW ID . AS query SEMICOLON

    AS  shift, and go to state 78


state 63

   29 create_database: CREATE DATABASE ID . SEMICOLON

    SEMICOLON  shift, and go to state 79


state 64

   32 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 80


state 65

   34 drop_view: DROP VIEW ID . SEMICOLON

    SEMICOLON  shift, and go to state 81


state 66

   30 drop_database: DROP DATABASE ID . SEMICOLON

    SEMICOLON  shift, and go to state 82


state 67

   81 attr: ID DOT . ID

    ID  shift, and go to state 83


state 68

   59 query: SELECT select_attr FROM . rel_list WHERE condition
   60      | SELECT select_attr FROM . rel_list

    ID  shift, and go to state 84

    rel_list  go to state 85


state 69

   83 attr_list: attr_list COMMA . attr

    ID  shift, and go to state 43

    attr  go to state 86


state 70

   47 insert: INSERT INTO ID . VALUES LBRACE value_list RBRACE SEMICOLON

    VALUES  shift, and go to state 87


state 71

   55 delete: DELETE STAR FROM . ID SEMICOLON

    ID  shift, and go to state 88


state 72

   53 delete: DELETE FROM ID . WHERE condition SEMICOLON
   54       | DELETE FROM ID . SEMICOLON

    SEMICOLON  shift, and go to state 89
    WHERE      shift, and go to state 90


state 73

   56 update: UPDATE ID SET . assignment_list WHERE condition SEMICOLON

    ID  shift, and go to state 43

    assignment_list  go to state 91
    attr             go to state 92


state 74

   28 use_database: USE ID SEMICOLON .

    $default  reduce using rule 28 (use_database)


state 75

   24 show: SHOW DATABASES SEMICOLON .

    $default  reduce using rule 24 (show)


state 76

   25 show: SHOW TABLES SEMICOLON .

    $default  reduce using rule 25 (show)


state 77

   31 create_table: CREATE TABLE ID LBRACE . attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 93

    attr_def_list  go to state 94
    attr_def       go to state 95


state 78

   33 create_view: CREATE VIEW ID AS . query SEMICOLON

    SELECT  shift, and go to state 5

    query  go to state 96


state 79

   29 create_database: CREATE DATABASE ID SEMICOLON .

    $default  reduce using rule 29 (create_database)


state 80

   32 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 32 (drop_table)


state 81

   34 drop_view: DROP VIEW ID SEMICOLON .

    $default  reduce using rule 34 (drop_view)


state 82

   30 drop_database: DROP DATABASE ID SEMICOLON .

    $default  reduce using rule 30 (drop_database)


state 83

   81 attr: ID DOT ID .

    $default  reduce using rule 81 (attr)


state 84

   84 rel_list: ID .

    $default  reduce using rule 84 (rel_list)


state 85

   59 query: SELECT select_attr FROM rel_list . WHERE condition
   60      | SELECT select_attr FROM rel_list .
   85 rel_list: rel_list . COMMA ID

    COMMA  shift, and go to state 97
    WHERE  shift, and go to state 98

    $default  reduce using rule 60 (query)


state 86

   83 attr_list: attr_list COMMA attr .

    $default  reduce using rule 83 (attr_list)


state 87

   47 insert: INSERT INTO ID VALUES . LBRACE value_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 99


state 88

   55 delete: DELETE STAR FROM ID . SEMICOLON

    SEMICOLON  shift, and go to state 100


state 89

   54 delete: DELETE FROM ID SEMICOLON .

    $default  reduce using rule 54 (delete)


state 90

   53 delete: DELETE FROM ID WHERE . condition SEMICOLON
